# OmniC

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.sh  count-code.sh  doxygen-workflow.sh
docs/: binarytree.md  dynarray.md  huffmantree.md  list.md
docs/html/: annotated.html  annotated_dup.js  binarytree_8h.html  binarytree_8h.js  binarytree_8h__incl.map  binarytree_8h__incl.md5  binarytree_8h_a23a65118bb14f18701d61d581196c385_cgraph.map  binarytree_8h_a23a65118bb14f18701d61d581196c385_cgraph.md5  binarytree_8h_a39cf8cf34dc07eb319198df837fae66f_cgraph.map  binarytree_8h_a39cf8cf34dc07eb319198df837fae66f_cgraph.md5  binarytree_8h_a6f5f68c510f08766db247041b988734a_cgraph.map  binarytree_8h_a6f5f68c510f08766db247041b988734a_cgraph.md5  binarytree_8h_a791521c9a330d161b9da1727fad9c102_cgraph.map  binarytree_8h_a791521c9a330d161b9da1727fad9c102_cgraph.md5  binarytree_8h_a8a82b3681c272fdf3d3ff6dcd710f341_cgraph.map  binarytree_8h_a8a82b3681c272fdf3d3ff6dcd710f341_cgraph.md5  binarytree_8h_acba078fac66acb1d9a9c8f998e4d695d_cgraph.map  binarytree_8h_acba078fac66acb1d9a9c8f998e4d695d_cgraph.md5  binarytree_8h_adeda3e19cbd7c80b8cbd294a31d21280_cgraph.map  binarytree_8h_adeda3e19cbd7c80b8cbd294a31d21280_cgraph.md5  binarytree_8h_ae2c9eb114e6805845e3d97fb466bfc8a_cgraph.map  binarytree_8h_ae2c9eb114e6805845e3d97fb466bfc8a_cgraph.md5  binarytree_8h_source.html  btree_8h_source.html  classes.html  common_8h.html  common_8h.js  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7e176869d051a84ef345cb46844b6ab1.html  dir_7e176869d051a84ef345cb46844b6ab1.js  dir_7e176869d051a84ef345cb46844b6ab1_dep.map  dir_7e176869d051a84ef345cb46844b6ab1_dep.md5  (+120 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  files_6.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js
docs/latex/: annotated.tex  binarytree_8h.tex  binarytree_8h__incl.md5  binarytree_8h_a23a65118bb14f18701d61d581196c385_cgraph.md5  binarytree_8h_a39cf8cf34dc07eb319198df837fae66f_cgraph.md5  binarytree_8h_a6f5f68c510f08766db247041b988734a_cgraph.md5  binarytree_8h_a791521c9a330d161b9da1727fad9c102_cgraph.md5  binarytree_8h_a8a82b3681c272fdf3d3ff6dcd710f341_cgraph.md5  binarytree_8h_acba078fac66acb1d9a9c8f998e4d695d_cgraph.md5  binarytree_8h_adeda3e19cbd7c80b8cbd294a31d21280_cgraph.md5  binarytree_8h_ae2c9eb114e6805845e3d97fb466bfc8a_cgraph.md5  binarytree_8h_source.tex  btree_8h_source.tex  common_8h.tex  common_8h__dep__incl.md5  common_8h__incl.md5  common_8h_source.tex  dynarray_8h.tex  dynarray_8h__incl.md5  dynarray_8h_source.tex  files.tex  graph_8h.tex  graph_8h__incl.md5  graph_8h_a2876f54f7dbc82dbab86f29a7389b172_cgraph.md5  graph_8h_source.tex  huffmantree_8h_source.tex  index.tex  list_8h.tex  list_8h__incl.md5  list_8h_source.tex  macros_8h.tex  macros_8h_source.tex  refman.tex  sorting_8h.tex  sorting_8h__incl.md5  sorting_8h_a222e737f0399162ec198727d26d543d5_cgraph.md5  sorting_8h_a46921148e407d51648e2f901c1e0ac9c_cgraph.md5  sorting_8h_a71906419caaf5565e5cfc6c562ec3eb1_cgraph.md5  sorting_8h_a9ed631930c9a5ee0b5de150788d76435_cgraph.md5  sorting_8h_ac9c2a72336284cbc0eecdead045f7745_cgraph.md5  (+34 more)
examples/: benchmark_sorting.c  demo_graph_flights.c  demo_list_polynomial.c  macro_vector.c  simple_vector.c  test_binarytree.c  test_dynarray.c  test_graph.c  test_huffmantree.c  test_list.c  test_vector.c  vector.c
include/omnic/: binarytree.h  common.h  ds_vector.h  dynarray.h  graph.h  huffmantree.h  list.h  macros.h  sorting.h  vector.h
src/: binarytree.c  huffmantree.c  sorting.c  vector.c
